--- a/src/app/Components/FrontOffice/stripe/stripe.component.html
+++ b/src/app/Components/FrontOffice/stripe/stripe.component.html
@@ -4,12 +4,17 @@
     
     <div class="form-group">
       <label class="amount-label">Total Amount</label>
-      <div class="amount-display">{{ amount }} $</div>
+      <div *ngIf="isDataLoaded; else loading" class="amount-display">
+        {{ amount / 100 | number:'1.2-2' }} $
+      </div>
+      <ng-template #loading>
+        <div>Loading payment details...</div>
+      </ng-template>
     </div>
 
     <div class="form-group">
       <label class="card-label">Card Information</label>
-      <div id="card-element" class="card-element"></div> <!-- Keep only this one -->
+      <div id="card-element" class="card-element"></div>
     </div>
 
     <div *ngIf="isProcessing" class="loading">Processing...</div>
